--- a/GigHub.Tests/packages.config
+++ b/GigHub.Tests/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="4.1.1" targetFramework="net45" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
-  <package id="Moq" version="4.8.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
 </packages>
