--- a/GigHub.Tests/packages.config
+++ b/GigHub.Tests/packages.config
@@ -3,6 +3,8 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
