--- a/GigHub/packages.config
+++ b/GigHub/packages.config
@@ -32,12 +32,11 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
-  <package id="Ninject" version="3.3.3" targetFramework="net45" />
-  <package id="Ninject.Extensions.Conventions" version="3.3.0" targetFramework="net45" />
-  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net45" />
-  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net45" />
-  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net45" />
-  <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net45" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.MVC" version="3.2.1" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Web.WebApi" version="3.2.1.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="StructureMap" version="4.5.3" targetFramework="net45" />
